# BCCRNASeq

./: .gitignore  GSE171892.ipynb  GSE171892.py  GSE171892_Human_BCC_ranked.csv  README.md  main.py  pyproject.toml
