[project]
name = "bccrnaseq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "harmonypy>=0.0.10",
    "igraph==0.11.9",
    "jupyter>=1.1.1",
    "leidenalg==0.10.2",
    "ruff>=0.14.2",
    "scanpy>=1.11.5",
    "scikit-misc>=0.5.1",
]
